// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RebuildHistory /> should render <LoadingPlaceholder /> when unbuilt is null 1`] = `
<Box__BoxGroup
  className="panel-default"
>
  <Box__BoxGroupHeader>
    Changes
  </Box__BoxGroupHeader>
  <LoadingPlaceholder
    margin="22px"
  />
</Box__BoxGroup>
`;

exports[`<RebuildHistory /> should render with error 1`] = `
<Box__BoxGroup
  className="panel-danger"
>
  <Box__BoxGroupHeader>
    Changes
  </Box__BoxGroupHeader>
  <History__RebuildHistoryContent>
    <RebuildHistoryItem
      description="test-description"
      key="123abc"
      otuName="test-otu"
    />
    <RebuildHistoryEllipsis
      unbuilt={
        Object {
          "documents": Array [
            Object {
              "description": "test-description",
              "id": "123abc",
              "otu": Object {
                "name": "test-otu",
              },
            },
          ],
          "page_count": 2,
          "per_page": 5,
          "total_count": 10,
        }
      }
    />
  </History__RebuildHistoryContent>
</Box__BoxGroup>
`;

exports[`<RebuildHistory /> should render without error 1`] = `
<Box__BoxGroup
  className="panel-default"
>
  <Box__BoxGroupHeader>
    Changes
  </Box__BoxGroupHeader>
  <History__RebuildHistoryContent>
    <RebuildHistoryItem
      description="test-description"
      key="123abc"
      otuName="test-otu"
    />
    <RebuildHistoryEllipsis
      unbuilt={
        Object {
          "documents": Array [
            Object {
              "description": "test-description",
              "id": "123abc",
              "otu": Object {
                "name": "test-otu",
              },
            },
          ],
          "page_count": 2,
          "per_page": 5,
          "total_count": 10,
        }
      }
    />
  </History__RebuildHistoryContent>
</Box__BoxGroup>
`;

exports[`<RebuildHistoryEllipsis /> should render when page_count greater than 1 1`] = `
<History__StyledRebuildHistoryEllipsis
  key="last-item"
>
  + 
  48
   more changes
</History__StyledRebuildHistoryEllipsis>
`;

exports[`<RebuildHistoryEllipsis /> should render when page_count is 1 1`] = `""`;

exports[`<RebuildHistoryItem /> should render with description 1`] = `
<History__HistoryItem>
  <strong>
    Foobar Virus
  </strong>
  Removed OTU
</History__HistoryItem>
`;

exports[`<RebuildHistoryItem /> should render without description 1`] = `
<History__HistoryItem>
  <strong>
    Foobar Virus
  </strong>
  No Description
</History__HistoryItem>
`;
